# BitMagic

./: .clang-format  CMakeLists.txt  LICENSE  notes.md
.cache/clangd/index/: bitmagic.c.34F0B6841B18547E.idx  bitmagic.h.3D858E551CCD798D.idx  example1.c.9B60AF9047D7008E.idx
examples/: example1.c
include/: bitmagic.h
src/: bitmagic.c
